# chart_analysis_ai_v3

./: .env copy.example  .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  arxiv2.md  chatlog.md  chatlog2.md  docker-compose.yml  instruction3.md  instruction4.md  instruction5.md  instruction_Mar01.md  instruction_temp.md  paddle_server.py  pyproject.toml  restart.md
.github/instructions/: README.md  coding-standards.instructions.md  docs.instructions.md  module-detection.instructions.md  module-extraction.instructions.md  module-reasoning.instructions.md  module-serving.instructions.md  module-training.instructions.md  pipeline.instructions.md  project.instructions.md  research.instructions.md  system.instructions.md  workflow.instructions.md
.github/workflows/: ci.yml
config/: .env.example  README.md  base.yaml  models.yaml  pipeline.yaml  training.yaml  yolo_chart_v3.yaml
config/gcp/: training_job.yaml
docs/: CHANGELOG.md  CONFIRM_CHART_QA_PIPELINE.md  CONFIRM_STAGE4_NOTEBOOKS.md  MASTER_CONTEXT.md  README.md  SESSION_LOG_2026_01_24.md  SYSTEM_ARCHITECTURE_DIAGRAMS.md  stage3_direction.md
docs/architecture/: PIPELINE_FLOW.md  STAGE3_EXTRACTION.md  STAGE4_REASONING.md  STAGE5_REPORTING.md  SYSTEM_OVERVIEW.md
docs/guides/: ARXIV_DOWNLOAD_GUIDE.md  BENCHMARK_GUIDE.md  CHART_QA_GUIDE.md  DEVELOPMENT.md  GEMINI_MODELS_API.md  PHASE1_DATA_FACTORY.md  QUICK_START.md  SLM_TRAINING_GUIDE.md  TRAINING.md  early_stopping_strategy.md
docs/progress/: REPORT_20260304.md  SESSION_LOG_20260304_BENCHMARK.md  WEEKLY_PROGRESS_20260204.md  WEEKLY_PROGRESS_20260301.md  WEEKLY_PROGRESS_20260302.md  WEEKLY_PROGRESS_20260305.md  WEEKLY_PROGRESS_20260315.md
docs/reports/: ACADEMIC_DATASET_TEST_REPORT.md  CLASSIFIER_IMPROVEMENTS.md  RESNET18_EVALUATION_REPORT.md  SLM_TRAINING_POSTMORTEM_V1.md  STAGE3_ANALYSIS_FEEDBACK_REPORT.md  STAGE3_CLASSIFIED_TEST_REPORT.md  STAGE3_COMPLETION_SUMMARY.md  STAGE3_VISUALIZATION.md  UPGRADE_REPORT_PRODUCTION_READY.md  WEEK1_COMPLETION_SUMMARY.md  WEEKLY_PROGRESS_20260129.docx  WEEKLY_PROGRESS_20260129.md  academic_dataset_results.json  classifier_ablation_study_v1.md  classifier_benchmark.json  data_pipeline_report_v1.md  mini_ablation_study_v1.md  simple_classifier_benchmark.json  stage3_classified_results.json  stage3_weakness_report.md
docs/research/: METHODOLOGY.md  SLM_FINE_TUNING_PLAN.md
docs/sessions/: dnote_2026-01-20_dataset_yolo.md  session_2026-01-20_dataset_prep_yolo_training.md
docs/task_instructions/: flow.md  instruction_01.md  instruction_03.md  instruction_04.md  instruction_05.md  instruction_06.md
docs/thesis_capstone/: aip491.sty  main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.lof  main.lot  main.out  main.tex  main.toc  main.xdv  refs.bib  thesis.instructions.md
interface/: demo_app.py  demo_utils.py
models/: README.md
models/evaluation/: ablation_baseline_eval.json  ablation_baseline_smoke.json  ablation_baseline_smoke2.json  ablation_baseline_smoke3.json  ablation_baseline_smoke4.json  llama-1b-base-quick.json  llama-1b-lora-v3-quick.json  llama-1b-lora-v3.json  test_results.json
models/onnx/: model_metadata.json
models/paddleocr_vl/: .gitattributes  README.md  inference.yml  modeling_paddleocr_vl.py  preprocessor_config.json  special_tokens_map.json  tokenizer.model  tokenizer_config.json
models/slm/: README.md
models/weights/: chart_classifier_rf.pkl  efficientnet_b0_3class_v1_results.json  efficientnet_b0_4class_v3_results.json  resnet18_3class_v1_results.json  resnet18_v2_results.json
notebooks/: 00_full_pipeline_test.ipynb  00_quick_start.ipynb  01_stage1_ingestion.ipynb  01a_data_collection.ipynb  01b_image_extraction.ipynb  01c_chart_detection.ipynb  01d_chart_classification.ipynb  01e_qa_generation.ipynb  01e_qa_generation_new.ipynb  01f_review_uncertain.ipynb  02_stage2_detection.ipynb  02_stage3_visualization.ipynb  03_stage3_extraction.ipynb  03x_qa_generation_v2.ipynb  04_academic_dataset_test.ipynb  04_data_exploration.ipynb  04_stage4_reasoning.ipynb  05_benchmark_comparison.ipynb  05_stage5_reporting.ipynb  06_error_analysis.ipynb  07_demo_interactive.ipynb  README.md
research/: README.md
research/experiments/: gemini_classifier_research_20260126_010706.json  gemini_classifier_research_20260126_010706.md  gemini_classifier_research_20260126_010949.json  gemini_classifier_research_20260126_010949.md  gemini_classifier_research_20260126_011117.json  gemini_classifier_research_20260126_011117.md  gemini_research_classifier.py  instruction_003.md  instruction_p2_01.md  instruction_p2_research.md  list_gemini_models.py  research_03.html
scripts/: README.md  auto_label_dataset.py  batch_ocr_gpu.py  batch_stage3_parallel.py  benchmark_classifier.py  benchmark_simple_classifier.py  check_training_progress.py  cleanup_chart_qa_v1.py  context_scanner.py  demo_full_pipeline.py  download_models.py  evaluate_resnet18.py  evaluate_slm.py  export_resnet18_onnx.py  extract_stage3_features.py  fix_duplicate_labels.py  generate_pipeline_report.py  generate_stage3_report.py  generate_synthetic_dataset.py  generate_thesis_figures.py  generate_thesis_tables.py  merge_chartqa_labels.py  migrate_dataset_v2.py  prepare_dataset_splits.py  prepare_slm_data.py  prepare_slm_training_data.py  prepare_slm_training_v3.py  prepare_training_data.py  run_batch_ocr.bat  setup_paddle_env.bat  test_detection.py  test_element_detector.py  test_full_pipeline.py  test_ocr.py  test_qwen_slm.py  test_resnet_integration.py  test_stage3_academic_dataset.py  test_stage3_classified.py  test_stage3_improvements.py  test_stage4.py  (+7 more)
scripts/_archive/: _audit_data.py  _audit_stage3.py  _cross_check.py  download_arxiv_batch.py  extract_backgrounds.py  generate_gradcam.py  generate_synthetic_dataset.py  (+1 more)
src/api/: main.py  (+6 more)
tests/: conftest.py  test_schemas.py
(+269 files in other folders)
